force-app/main/default/objects/System_Change__c/System_Change__c.object-meta.xml
<CustomObject>
    <description>This object is used to track changes in Salesforce.</description>
    <label>System Change</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>System Change Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>