force-app/main/default/objects/System_Change__c/fields/Description_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Change__c</fullName>
    <inlineHelpText>Describe any changes done to complete the request.</inlineHelpText>
    <label>Description of Change</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>