force-app/main/default/objects/System_Change__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ticket_Number__c</columns>
    <columns>Description_of_Request__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>